WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246362
Fix !ENABLE(ACCESSIBILITY) build after
255279@main
https://bugs.webkit.org/show_bug.cgi?id=246362
Summary
Fix !ENABLE(ACCESSIBILITY) build after 255279@main
Don Olmstead
Reported
2022-10-11 13:28:25 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2022-10-11 13:37:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5246
EWS
Comment 2
2022-10-11 14:30:24 PDT
Committed
255405@main
(6db040eda0e8): <
https://commits.webkit.org/255405@main
> Reviewed commits have been landed. Closing PR #5246 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-10-11 14:31:28 PDT
<
rdar://problem/101051271
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug