Fix !ENABLE(ACCESSIBILITY) build after 255279@main https://bugs.webkit.org/show_bug.cgi?id=246362

Unreviewed build fix.

Add an implementation of AXObjectCache::onSelectedChanged for
`!ENABLE(ACCESSIBILITY)`.

* Source/WebCore/accessibility/AXObjectCache.h:

Canonical link: https://commits.webkit.org/255405@main